--- a/大同图书馆/assets/css/site.css
+++ b/大同图书馆/assets/css/site.css
@@ -396,6 +396,15 @@ a:hover{
 	height : 30px;
 	background: url('../images/icon/icon-question.svg') left top no-repeat;
 }
+.icon-question-arrow{
+    width : 12px;
+    height : 8px;
+    margin-top: 10px;
+	background: url('../images/icon/icon-question-arrow.svg') left top no-repeat;
+}
+.active .icon-question-arrow{
+    transform: rotate(180deg)
+}
 .icon-search{
     width: 20px;
     height: 20px;
@@ -1107,7 +1116,8 @@ a:hover{
 .resource-list .wrap{
     border: 1px solid #f0e5d4;
     padding : 15px;
-    height: 612px;
+    min-height : 300px;
+    max-height: 612px;
     overflow-y: auto;
 }
 .resource-list li{
@@ -1288,6 +1298,7 @@ a:hover{
     float: left;
     margin-right: 43px;
     margin-bottom: 20px;
+    height: 325px;
 }
 .book-commend-list a{
     display: block;
@@ -1728,4 +1739,81 @@ body .page-wrap-header{
 }
 body{
     min-width : 1520px;
+}
+/* 2019 03 11 */
+.news-body img{
+    max-width: 98%;
+}
+.video-gallery-top{
+    width: 730px;
+}
+.video-list li .t{
+    font-size: 14px !important;
+}
+.video-title .pull-right a {
+    font-size : 12px;
+}
+.video-dir-pane{
+    display: none;
+}
+.video-dir li{
+    display: inline-block;
+    font-size : 14px;
+    margin-right: 35px;
+    cursor: pointer;
+}
+.video-dir li.active{
+    font-weight: bold;
+    font-size : 18px;
+    cursor: default;
+}
+.modal-header-book{
+    padding: 10px 30px 10px 10px;
+}
+
+
+.book-commend-list-summary li {
+    width: 50%;
+    float: left;
+    box-sizing: border-box;
+    padding-left: 170px;
+    padding-right: 40px;
+    margin-bottom: 40px;
+}
+.book-commend-list-summary li .img {
+    float: left;
+    margin-left: -170px;
+    width: 150px;
+    height: 170px;
+    line-height: 170px;
+    border: solid 1px #82766a;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    transition: all .3s;
+}
+.book-commend-list-summary li .img:hover{
+    box-shadow: 1px 1px 7px #ccc;
+}
+.book-commend-list-summary .img img {
+    width: 138px;
+}
+.book-commend-list-summary li .info{
+    overflow: hidden;
+    color: #999;
+    height: 150px;
+    overflow: hidden;
+}
+.book-commend-list-summary li .item{
+    padding : 3px 0;
+    line-height: 150%;
+}
+.book-commend-list-summary li .detail{
+    margin-top: 5px;
+    line-height: 25px;
+    height: 50px;
+    overflow: hidden;
+}
+.book-commend-list-summary li .t strong{
+    font-size: 16px;
 }
