--- a/厦门中小学云图书馆/assets/css/site.css
+++ b/厦门中小学云图书馆/assets/css/site.css
@@ -1002,12 +1002,51 @@ fieldset[disabled] .btn-primary.focus {
 }
 
 /* 2019 03 11 */
-.register-body .input-login{
-    padding-left: 0;
-}
-.register-body .item{
-    margin-top: 20px;
-}
+
 .text-primary {
     color: #00ace8;
+}
+.page-form .form-horizontal .control-label{
+    font-size : 14px;
+    font-weight: normal;
+    padding-right: 5px;
+}
+.page-form .form-horizontal{
+    margin-left: -30px;
+    margin-right: 20px;
+}
+.page-form-password{
+    width: 360px;
+    margin: 150px auto 0;
+}
+.page-form-info{
+    width: 360px;
+    margin: 120px auto 0;
+}
+.page-form-register{
+    width: 360px;
+    margin: 100px auto 0;
+}
+.page-form ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color:#ccc;
+}
+.page-form ::-moz-placeholder { /* Firefox 19+ */
+    color:#ccc;
+}
+.page-form :-ms-input-placeholder { /* IE 10+ */
+    color:#ccc;
+}
+.page-form .btn-primary{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    font-size : 16px;
+    border-radius: 30px;
+}
+.page-form .password-submit{
+    padding-right: 10px;
+    padding-left: 80px;
+}
+.text-required{
+    color: #fd5f72;
 }
