--- a/厦门中小学云图书馆/assets/css/site.css
+++ b/厦门中小学云图书馆/assets/css/site.css
@@ -1051,3 +1051,6 @@ fieldset[disabled] .btn-primary.focus {
     color: #fd5f72;
     font-size : 14px;
 }
+.form-control-static{
+    font-size : 14px;
+}
