--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -332,7 +332,7 @@ body{
     width: 226px;
     padding-bottom: 50px;
     float: left;
-    min-height: 500px;
+    min-height: 300px;
     background : url('../images/bg-aside.png') no-repeat left bottom;
     background-color: #134683;
 }
@@ -484,4 +484,22 @@ body{
 .pagination>li:last-child>a, .pagination>li:last-child>span {
     border-bottom-right-radius: 2px;
     border-top-right-radius: 2px;
+}
+.editor{
+    line-height: 180%;
+}
+.editor p{
+    margin-bottom: 18px;
+}
+.editor img{
+    max-width: 98%;
+}
+.editor ul,.editor li{
+    list-style: inherit;
+}
+.editor ul li{
+    margin-left: 20px;
+}
+.editor ol li{
+    margin-left: 0;
 }
