--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -384,6 +384,12 @@ body{
 .footer a{
     color: #fff;
 }
+.footer .gap-1{
+    margin-right: 60px;
+}
+.footer .gap-2{
+    margin-right: 30px;
+}
 .main{
     background-color: #fff;
 }
