--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -293,6 +293,25 @@ li,ul{
 	height : 18px;
 	background: url('../images/icon/icon-node.svg') left top no-repeat;
 }
+.icon-media{
+    width : 62px;
+	height : 62px;
+	background: url('../images/icon/icon-media.svg') left top no-repeat;
+}
+.icon-arrow-down{
+    width : 18px;
+	height : 18px;
+	background: url('../images/icon/icon-arrow-down.svg') left top no-repeat;
+}
+.icon-arrow-down.icon-arrow-down-active{
+	background: url('../images/icon/icon-arrow-down-active.svg') left top no-repeat;
+}
+.icon-mark{
+    width:43px;
+    height:34px;
+    background: url('../images/icon/icon-mark.svg') left top no-repeat;
+}
+
 
 
 body{
@@ -784,6 +803,186 @@ body{
     padding : 15px 20px 10px;
 }
 
+.img-list-style-1 {
+    margin-left: -18px;
+}
+.img-list-style-1 li{
+    float: left;
+    width:336px;
+    margin-left: 18px;
+    text-align: center;
+    height:260px;
+}
+.img-list-style-1 .img{
+    border: 1px solid #ddd;
+    display: block;
+    padding : 8px;
+    height:205px;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+}
+.img-list-style-1 .t{
+    margin-top: 10px;
+    display: block;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    font-size:16px;
+}
+.img-list-style-1 li:hover .img{
+    margin-top: -5px;
+    border-color: #bbb;
+    box-shadow: 1px 1px 7px #bbb;
+}
+
+.img-list-style-1 img{
+    max-width: 320px;
+    min-height: 190px;
+}
+
+.theme-list {
+    margin-left: -18px;
+}
+.theme-list li{
+    float: left;
+    width:336px;
+    margin-left: 18px;
+    text-align: center;
+    height:340px;
+}
+.theme-list .img{
+    border: 1px solid #ddd;
+    display: block;
+    padding : 8px;
+    height:205px;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+}
+.theme-list .t{
+    margin-top: 10px;
+    display: block;
+    overflow:hidden;
+    height:40px;
+    line-height:20px;
+    font-size:16px;
+    text-align: left;
+}
+.theme-list a:hover{
+    text-decoration: none;
+}
+.theme-list .date{
+    background-color: #C1DDFF;
+    height: 60px;
+    line-height: 60px;
+    padding : 0 15px;
+    color: #134683;
+    display: block;
+    text-align: left;
+}
+.theme-list .date .primary{
+    font-size: 32px;
+    font-weight: bold;
+}
+.theme-list li:hover .img{
+    margin-top: -10px;
+    border-color: #bbb;
+}
+
+.theme-list img{
+    max-width: 320px;
+    min-height: 190px;
+}
+.site-tabs li{
+    float: left;
+    margin-right: 10px;
+}
+.site-tabs a{
+    display: inline-block;
+    height: 32px;
+    line-height: 32px;
+    border: 1px solid #ddd;
+    padding: 0 20px;
+}
+.site-tabs a:hover{
+    text-decoration: none;
+    border-color: #bbb;
+}
+.site-tabs .active a{
+    background-color: #CC0807;
+    border-color: #CC0807;
+    color:#fff;
+}
+.site-tabs{
+    margin-right: 10px;
+}
+
+.book-list li{
+    width: 50%;
+    padding-left: 166px;
+    padding-right:30px ;
+    float: left;
+    box-sizing: border-box;
+    height:230px;
+    overflow: hidden;
+}
+.book-list .img{
+    margin-left: -166px;
+    border:1px solid #ddd;
+    height: 175px;
+    text-align: center;
+    line-height: 175px;
+    width: 145px;
+    float: left;
+    display: block;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+}
+.book-list .t a{
+    font-size: 16px;
+    font-weight: bold;
+}
+.book-list .sub{
+    line-height: 170%;
+}
+.book-list .info{
+    line-height: 20px;
+    height: 80px;
+    overflow: hidden;
+}
+.book-list .img img{
+    max-height: 175px;
+    max-width: 145px;
+}
+.book-list .img:hover{
+    border-color: #bbb;
+    box-shadow: 1px 1px 6px #ccc;
+}
+.book-show {
+    overflow: hidden;
+    padding-left: 310px;
+    padding-bottom: 50px;
+    padding-right: 20px;
+    
+}
+.book-show .info{
+    line-height: 180%;
+}
+.book-show .img{
+    margin-left: -310px;
+    float: left;
+    width: 280px;
+    height: 342px;
+    line-height: 342px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+.book-show .img img{
+    max-width: 260px;
+    max-height: 340px;
+}
 .talk-list .dir{
     padding: 0 20px 0 10px;
     display: inline-block;
@@ -792,6 +991,37 @@ body{
     font-size: 16px;
     background-color: #CC0807;
     color: #fff;
+}
+.talk-list .item{
+    line-height: 20px;
+    padding-bottom: 8px;
+}
+.talk-list .title{
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 10px;
+}
+.talk-list li{
+    padding-left: 215px;
+    margin-bottom: 30px;
+}
+.talk-list li .wrap{
+    padding-right: 30px;
+    min-height: 227px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+}
+.talk-list .img{
+    background-color: #F1F1F1;
+    padding : 8px;
+    width:186px;
+    margin-left: -215px;
+    float: left;
+}
+.talk-list .img img{
+    max-width: 170px;
+    min-height: 170px;
 }
 .talk-list .dir .arrow{
     /* width:0; 
@@ -812,4 +1042,254 @@ body{
     height: 0;
     border-color: transparent;
     border-style: solid;
+}
+.media-views {
+    height: 320px;
+}
+.media-views .views{
+    float: left;
+    width: 710px;
+}
+.media-views .view{
+    width: 710px;
+    height: 320px;
+    position: relative;
+}
+.media-views .view .t{
+    position: absolute;
+    background: rgba(0,0,0,.5);
+    left: 0;
+    bottom : 0;
+    right: 0;
+    height: 60px;
+    line-height: 60px;
+    color: #fff;
+    font-weight: bold;
+    overflow: hidden;
+    font-size: 16px;
+    padding : 0 25px;
+}
+.media-views .view .icon-media{
+    left: 50%;
+    top: 50%;
+    margin: -31px 0 0 -31px;
+    z-index : 1;
+    position: absolute;
+}
+.media-views .thumbs{
+    float: right;
+    width: 337px;
+    margin-left: -2px;
+    overflow: hidden;
+}
+.media-views .thumbs .img{
+    width: 160px;
+    height: 102px;
+    line-height: 102px;
+    float: left;
+    text-align: center;
+    position: relative;
+    margin-left: 7px;
+    margin-bottom: 7px;
+    float: left;
+}
+.media-views .thumbs .img .shadow{
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom : 0;
+    z-index: 1;
+    background: rgba(0,0,0,.5)
+}
+.media-views .thumbs .img.active .shadow{
+    display: none;
+}
+.media-views .thumbs img{
+    max-width: 160px;
+    max-height: 102px;
+}
+.media-list{
+    margin-left: -40px;
+}
+.media-list li{
+    float: left;
+    margin-left: 30px;
+    width: 240px;
+    height: 200px;
+    
+}
+.media-list li .img{
+    width: 240px;
+    height: 135px;
+    line-height: 135px;
+    text-align: center;
+    display: block;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+}
+.media-list li .img img{
+    max-width: 240px;
+    max-height: 135px;
+}
+.media-list li:hover .img{
+    margin-top: -10px;
+}
+.media-list li .t{
+    margin-top: 6px;
+    height: 40px;
+    line-height: 20px;
+    display: block;
+    overflow: hidden;
+}
+.question-list li .t{
+    padding : 15px 0 ;
+    font-size: 16px;
+    display: block;
+    border-bottom : 1px solid #ddd;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+}
+.question-list li .t:hover{
+    text-decoration: none;
+    background-color: #f1f1f1;
+    padding: 15px 10px;
+}
+.question-list li.active .t{
+    border: none;
+}
+.question-list li .answer{
+    background-color: #D9E5F2;
+    padding : 12px 20px;
+    display: none;
+    border : 1px solid #ddd;
+}
+.question-list li.active .answer{
+    display: block;
+}
+.consult-tips{
+    padding : 30px 20px;
+    background-color: #F1F1F1;
+    padding-left: 96px;
+}
+.consult-tips .icon-mark{
+    float: left;
+    background-color: #000;
+    margin-left: -76px;
+    margin-top: -10px;
+}
+.table-consult tbody td{
+    padding : 16px 8px !important;
+    color:#999;
+}
+.table-consult thead tr th:first-child{
+    padding-left: 0 !important;
+}
+.table-consult tbody tr td:first-child{
+    padding-left: 0 !important;
+    color: #333;
+}
+.table>thead>tr>th {
+    border-bottom: 1px solid #ddd;
+}
+.table-bordered>thead>tr>th, .table-bordered>thead>tr>td{
+    border-width: 1px;
+}
+.table-custom>thead>tr>th, .table-custom>thead>tr>td{
+    border: none;
+}
+.table-custom td{
+    border: 1px solid #ddd;
+    padding : 25px 20px !important;
+    vertical-align: middle !important;
+}
+.table-custom td a{
+    color: #0967D9;
+    text-decoration: underline;
+}
+.table-custom td a:first-child{
+    margin-right: 20px;
+}
+
+.resource-theme-list{
+    margin-left: -29px;
+}
+.resource-theme-list li{
+    width: 150px;
+    height: 240px;
+    text-align: center;
+    float: left;
+    margin-left: 29px;
+}
+.resource-theme-list li .img{
+    width: 150px;
+    height: 180px;
+    line-height: 180px;
+    border: 1px solid #ddd;
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    display: block;
+}
+.resource-theme-list li:hover .img{
+    margin-top: -10px;
+    border-color: #bbb;
+    box-shadow: 1px 1px 7px #ccc;
+}
+.resource-theme-list li img{
+    max-width: 140px;
+    max-height: 170px;
+}
+.resource-theme-list li .t{
+    margin-top: 8px;
+    display: block;
+    height: 40px;
+    overflow: hidden;
+    line-height: 20px;
+}
+.ebook-list li{
+    width: 50%;
+    float: left;
+    padding-left: 220px;
+    padding-right: 100px;
+    margin-bottom: 40px;
+}
+.ebook-list li .img{
+    margin-left: -220px;
+    float: left;
+}
+.ebook-list li .img{
+    border: 2px solid #f1f1f1;
+    width: 200px;
+    height: 250px;
+    line-height: 250px;
+    text-align: center;
+}
+.ebook-list li .t{
+    height: 44px;
+    line-height: 22px;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+.ebook-list li .info{
+    height: 100px;
+    line-height: 20px;
+}
+.ebook-list li .img img{
+    max-width: 240px;
+    max-width: 190px;
+}
+.ebook-list li .type,.ebook-list li .size {
+    color:#413122;
+    height: 27px;
+}
+.btn{
+    padding: 0 15px !important;
+    height: 40px !important;
+    line-height: 40px !important;
+    border-radius: 0 !important;
+    border: 1px solid #ddd !important;
 }
