--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -306,7 +306,7 @@ li,ul{
 	height : 18px;
 	background: url('../images/icon/icon-arrow-down.svg') left top no-repeat;
 }
-.icon-arrow-down.icon-arrow-down-active{
+.active .icon-arrow-down{
 	background: url('../images/icon/icon-arrow-down-active.svg') left top no-repeat;
 }
 .icon-mark{
@@ -314,7 +314,7 @@ li,ul{
     height:34px;
     background: url('../images/icon/icon-mark.svg') left top no-repeat;
 }
-.icon-pic-arrow-top,.icon-pic-arrow-down{
+.icon-pic-arrow-up,.icon-pic-arrow-down{
     width:220px;
     height:30px;
     background: url('../images/icon/icon-pic-arrow-top.svg') left top no-repeat;
@@ -1199,9 +1199,6 @@ body{
     display: none;
     border : 1px solid #ddd;
 }
-.question-list li.active .answer{
-    display: block;
-}
 .consult-tips{
     padding : 30px 20px;
     background-color: #F1F1F1;
@@ -1439,6 +1436,7 @@ body{
     color:#fff;
     position: absolute;
     left: 0;
+    display: none;
 }
 .tooltips .arrow{
     width:0;
@@ -1450,4 +1448,46 @@ body{
     top : 0;
     margin-top: -5px;
     left: 40px;
+}
+.net-img-views{
+    height: 485px;
+    position: relative;
+}
+.net-img-views .icon-pic-arrow-up{
+    position: absolute;
+    right : 0;
+    top: 0;
+}
+.net-img-views .icon-pic-arrow-down{
+    position: absolute;
+    right : 0;
+    bottom: 0;
+}
+.net-img-views .views{
+    width: 820px;
+    height: 485px;
+    float: left;
+}
+.net-img-views .view{
+    text-align: center;
+    line-height: 485px;
+}
+.net-img-views .views img{
+    max-width: 820px;
+    max-height: 485px;
+}
+.net-img-views .thumbs{
+    margin-top: 42px;
+    width:220px;
+    height: 400px;
+    float: right;
+}
+.net-img-views .thumb{
+    text-align: center;
+    line-height: 130px;
+    height: 130px;
+}
+.net-img-views .thumb img{
+    max-width: 220px;
+    max-height: 130px;
 }
