--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -363,7 +363,9 @@ body{
     color: #fff;
     text-decoration: none;
 }
-
+.menu dl{
+    background-color: #FF033067;
+}
 .page-container{
     margin: 0 auto;
     width: 1336px;
@@ -418,6 +420,42 @@ body{
 .aside .nav li.active>a{
     background-color: #0967D9;
     cursor: default;
+}
+.aside dl{
+    background-color: #033067;
+    margin-bottom: 0;
+    padding: 5px 0;
+    display: none;
+}
+.aside .active dl{
+    display: block;
+}
+.aside dl a{
+    padding-left: 35px;
+    display: block;
+    height: 40px;
+    line-height: 40px;
+}
+.aside dl a{
+    color: #76B4FF;
+    position: relative;
+}
+.aside dl .active a{
+    color: #fff;
+}
+.aside dl .active a::after{
+    color: #fff;
+    position: absolute;
+    width: 24px;
+    height: 3px;
+    background-color: #0967D9;
+    content: " ";
+    left: 35px;
+    bottom : 0;
+}
+.aside dl a:hover{
+    text-decoration: none;
+    color: #fff;
 }
 
 .footer{
