--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -514,7 +514,9 @@ body{
 .content-container{
     padding : 20px 0 40px;
 }
-
+.news-list{
+    margin-bottom: 20px;
+}
 .news-list a{
     display: block;
     height: 50px;
@@ -538,6 +540,17 @@ body{
 }
 .news-list a:hover .t{
     color:#1069D5;
+}
+.tag{
+    font-size: 12px;
+    padding : 3px 10px;
+    background-color: #ddd;
+    margin-right: 5px;
+    border-radius: 2px;
+}
+.tag-active{
+    color: #fff;
+    background-color: #7ED321;
 }
 .pagination{
     margin-top: 0 !important;
@@ -1394,6 +1407,10 @@ body{
 .consult-form .label{
     font-weight: bold;
 }
+.consult-form .required{
+    color: #ff4848;
+    margin-top: -10px;
+}
 .form-control{
     border: 1px solid #ddd !important;
     padding: 7px 12px !important;
@@ -1439,10 +1456,17 @@ body{
     background-color: #f5f5f5;
 }
 .user-question-list .text{
-    padding : 15px 40px;
+    padding : 10px 40px;
 }
 .user-question-list label{
     font-weight: normal;
+}
+.user-question-list .item{
+    padding : 3px 0;
+}
+.user-question-list input[type="radio"],.user-question-list  input[type="checkbox"]{
+    margin-top: -1px;
+    vertical-align: middle;
 }
 .user-question-list .w700{
     width: 700px;
@@ -1528,4 +1552,37 @@ body{
 .net-img-views .thumb img{
     max-width: 220px;
     max-height: 130px;
+}
+.modal-tips{
+    background-color: #022651;
+    position: fixed;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
+    z-index: 10;
+    
+}
+.modal-tips .wrap{
+    padding : 20px;
+    border-bottom: 1px solid #01397C;
+}
+.global-modal .shadow{
+    position: fixed;
+    left: 0;
+    right :0;
+    top: 0;
+    bottom: 0;
+    z-index: 9;
+}
+.modal-tips .button{
+    text-align: center;
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+}
+.modal-tips .button:hover{
+    text-decoration: none;
 }
